# text-graphics-agent

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CITATION.cff  CITATION.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  LICENSE.zh-CN.md  NOTICE  NOTICE.zh-CN  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  pyproject.toml  run_gui.py
.github/: pull_request_template.md
docs/: README.md  README.zh-CN.md  architecture.md  architecture.zh-CN.md  brand_kit.md  brand_kit.zh-CN.md  chinese_doc_review.md  citation_audit_20260704.md  citation_audit_20260704.zh-CN.md  defensive_publication.md  defensive_publication.zh-CN.md  extraction_map.md  extraction_map.zh-CN.md  implementation_risk_register_20260704.md  implementation_risk_register_20260704.zh-CN.md  live_api_benchmark_20260703.md  live_api_benchmark_20260703.zh-CN.md  market_survey.md  market_survey.zh-CN.md  operation_guide.md  operation_guide.zh-CN.md  packaging.md  packaging.zh-CN.md  paper_draft.md  paper_draft.zh-CN.md  provenance_artifacts_20260704.md  provenance_artifacts_20260704.zh-CN.md  public_launch_checklist.md  public_launch_checklist.zh-CN.md  submission_prep.md  submission_prep.zh-CN.md
examples/: README.md  README.zh-CN.md  snake_game.html
tests/: text_graphics_agent_test.py
text_graphics_agent/: __init__.py  agent_cards.py  api_benchmark.py  approval.py  async_executor.py  automation.py  benchmark.py  config.py  constraints.py  demo.py  graph.py  gui.py  intent.py  interactive_sandbox.py  memory.py  orchestrator.py  pipeline.py  profiles.py  records.py  (+5 more)
(+8 files in other folders)
