[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-graphics-agent"
version = "0.1.0"
description = "A semantic firewall for disposable child-agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Lijie Wang" }
]
keywords = [
  "ai-agents",
  "multi-agent-systems",
  "semantic-contamination",
  "constraint-checking",
  "state-records"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.gui-scripts]
text-graphics-agent = "text_graphics_agent.gui:main"

[project.urls]
Homepage = "https://github.com/910636071/text-graphics-agent-release"
Repository = "https://github.com/910636071/text-graphics-agent-release"
Documentation = "https://github.com/910636071/text-graphics-agent-release/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["text_graphics_agent*"]
